--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -42,18 +42,17 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\SpeechAndText\Scripts\SpeechToText.cs" />
+     <Compile Include="Assets\Scripts\CanvasHelper.cs" />
      <Compile Include="Assets\Scripts\SkyboxController.cs" />
      <Compile Include="Assets\SpeechAndText\Sample\SpeechButton.cs" />
      <Compile Include="Assets\SpeechAndText\Sample\SampleSpeechToText.cs" />
      <Folder Include="Assets" />
      <Folder Include="Assets\SpeechAndText\Scripts" />
      <Folder Include="Assets\Settings" />
-     <Folder Include="Assets\Textures\textures" />
      <Folder Include="Assets\Samples\VX Audio\1.2.0\Audio Visualizer Sample" />
      <Folder Include="Assets\SpeechAndText\Sample" />
-     <Folder Include="Assets\Scenes\SpeakGPT" />
+     <Folder Include="Assets\Textures\Images" />
      <Folder Include="Assets\Samples\VX Audio\1.2.0\Audio Visualizer Sample\Materials" />
-     <Folder Include="Assets\Not needed files (may be useful)" />
      <Folder Include="Assets\Samples" />
      <Folder Include="Assets\Materials" />
      <Folder Include="Assets\Scripts" />
@@ -64,6 +63,7 @@
      <Folder Include="Assets\Samples\VX Audio" />
      <Folder Include="Assets\Samples\VX Audio\1.2.0" />
      <Folder Include="Assets\Scenes" />
+     <Folder Include="Assets\Textures\Skybox" />
      <Folder Include="Assets\IcoSphere" />
      <Reference Include="UnityEngine">
      <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
